# probullstats

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  README.rst  mypy.ini  noxfile.py  poetry.toml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
docs/: conf.py  index.rst
src/probullstats/: __init__.py  __main__.py  console.py  models.py
src/probullstats/commands/: __init__.py  bulls.py  events.py
tests/features/: cli.feature  environment.py  owner.feature
tests/features/steps/: cli.py  owner.py
tests/suite/: test_console.py
tests/suite/commands/: __init__.py  test_bulls.py  test_events.py
