[tool.poetry]
name = "probullstats"
version = "0.1.0"
description = ""
authors = ["Guy Hoozdis <GuyHoozdis@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "probullstats", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
