[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "probullstats"
version = "0.1.0"
description = ""
authors = ["Guy Hoozdis <GuyHoozdis@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "probullstats", from = "src"}]


[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "^0.13.13"

[tool.poetry.group.test.dependencies]
testtools = "^2.7.2"
coverage = {extras = ["toml"], version = "^7.6.0"}
pre-commit = [
    {version = "^3.7.1", python = "^3.9"},
    {version = "*", python = "<3.9"},
]
mypy = "^1.11.0"
ruff = "^0.5.4"
behave = "^1.2.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = [
    {version = "^7.3.7", python = "^3.9"},
    {version = "*", python = "<3.9"},
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings. and indent with spaces, rather than tabs.
quote-style = "double"
indent-style = "space"

# Like Black, respect trailing commas and automatically detect the line ending.
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
